--- a/src/app/pages/homepage/blog-details/blog-details.component.html
+++ b/src/app/pages/homepage/blog-details/blog-details.component.html
@@ -16,8 +16,8 @@
                 <button class="btn btn-primary" routerLink='/home'>Go back</button>
               </div>
               <div class="col-md-6 d-flex justify-content-end ">
-                <button class="btn btn-danger mr-20" (click)="delete(blog.id)">Delete Post</button>
-                <button class="btn btn-success" (click)="updateBlog()">Update Post</button>
+                <button id="deletePost" class="btn btn-danger mr-20" (click)="delete(blog.id)">Delete Post</button>
+                <button id="update_post" class="btn btn-success" (click)="updateBlog()">Update Post</button>
               </div>
             </div>
         
