--- a/src/app/pages/homepage/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage/homepage.component.html
@@ -84,7 +84,7 @@
       <div class="d-flex justify-content-center w-100-per mt-30">
         <!-- Column -->
         <div class="col-md-12 text-center">
-          <button class="btn btn-success" (click)="add_post()"> Add a post</button>
+          <button id="add_post" class="btn btn-success" (click)="add_post()"> Add a post</button>
         </div>
         <!-- Column -->
       </div>
