--- a/src/app/modal/add-post/add-post.component.html
+++ b/src/app/modal/add-post/add-post.component.html
@@ -1,4 +1,4 @@
-<div class="card p-30">
+<div id="addpostModal" class="card p-30">
     <div class="card-title">
         Add a post
     </div>
@@ -18,7 +18,7 @@
             </mat-error>
         </mat-form-field>
         <div class="col-md-12 d-flex justify-content-end">
-            <button class="btn btn-white t-black mr-10" (click)="cancel()">
+            <button id ="closehomodal" class="btn btn-white t-black mr-10" (click)="closeModal($event)">
                 Cancel
             </button>
             <ng-container *ngIf="event == 'add'">
